@@ -1,3 +1,6 @@
+132
+- Fix python addon
+
 131
 - Update to docker 19.03.14
 
